--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "tp-final-tp2",
   "version": "0.0.0",
+  "type": "module",
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
