--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-PORT="3000"
+MONGODB_URI="mongodb+srv://sebastiantvg:HI8EtnImnVF9Skvr@clustertp2.wyx9tae.mongodb.net/?retryWrites=true&w=majority&appName=ClusterTp2"
+PORT=3000
+HI8EtnImnVF9Skvr
