--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 MONGODB_URI="mongodb+srv://sebastiantvg:HI8EtnImnVF9Skvr@clustertp2.wyx9tae.mongodb.net/?retryWrites=true&w=majority&appName=ClusterTp2"
 PORT=3000
-HI8EtnImnVF9Skvr
+CLAVE_SECRETA = "tp2_2024_tpfinal"
+## HI8EtnImnVF9Skvr
