--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGODB_URI="mongodb+srv://sebastiantvg:HI8EtnImnVF9Skvr@clustertp2.wyx9tae.mongodb.net/?retryWrites=true&majority&appName=ClusterTp2"
+MONGODB_URI="mongodb+srv://sebastiantvg:HI8EtnImnVF9Skvr@clustertp2.wyx9tae.mongodb.net/?retryWrites=true&w=majority&appName=ClusterTp2"
 PORT=3000
-CLAVE_SECRETA="tp2_2024_tpfinal"
+CLAVE_SECRETA = "tp2_2024_tpfinal"
 ALLOWED_ORIGINS=https://ptn2-tp-final-dh7ygl781-agusaltas-projects.vercel.app,http://localhost:3001
